# vapoursynth-SNEEDIF

./: .gitignore  meson.build
SNEEDIF/: NNEDI3.cpp  shared.hpp
